--- a/style.css
+++ b/style.css
@@ -10,21 +10,26 @@
 /******************************************
 /* LAYOUT
 /*******************************************/
-h1, h2{
+.topnav{
   text-align: center;
+  background-color:white;
+  overflow:hidden;
 }
-img{
-  display: block;
-  height: 300px;
-  margin: 0 auto;
+.topnav a{
+  color:black;
+  text-align:center;
+  padding:14px 16px;
+  text-decoration:none;
+  font-size:17px;  
 }
-ul{
+
+ .topnav a hover{
   width: 100px;
   height: 200px;
   border: 3px solid black;
   margin: 0 auto;
   list-style: none;
-  padding: 0;
+  padding: 14px ;
 }
 li{
   width: 94px;
