👟🏭 Checkpoint ./index.html:41095882/103 ./style.css:41095882/38

--- a/style.css
+++ b/style.css
@@ -28,7 +28,9 @@
  display:none;
   
 }
-
+.mainimage{
+text-align:center;
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
