🗺👯 Checkpoint ./index.html:41095882/269 ./style.css:41095882/164

--- a/style.css
+++ b/style.css
@@ -30,6 +30,13 @@
 }
 .mainimage{
 text-align:center;
+
+}
+.top-left{
+position:absolute;
+bottom:8px;
+left:16px;
+font-size:30px;
 }
 /******************************************
 /* ADDITIONAL STYLES
