--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ text-align:center;
 .top-left{
 position:absolute;
 bottom:8px;
-left:16px;
+top:10px;
 font-size:30px;
 }
 /******************************************
