--- a/style.css
+++ b/style.css
@@ -36,7 +36,10 @@ text-align:center;
 position:absolute;
 bottom:8px;
 top:10px;
-font-size:30px;
+font-size:50px;
+}
+img{
+  background-image:url("")
 }
 /******************************************
 /* ADDITIONAL STYLES
