🏑👨‍❤️‍👨 Checkpoint ./style.css:41095882/237 ./index.html:41095882/211

--- a/style.css
+++ b/style.css
@@ -39,7 +39,11 @@ top:10px;
 font-size:50px;
 }
 img{
-  background-image:url("")
+  background-image:url("https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025");
+  height:100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 /******************************************
 /* ADDITIONAL STYLES
