--- a/style.css
+++ b/style.css
@@ -45,6 +45,25 @@ img{
   background-repeat: no-repeat;
   background-size: cover;
 }
+.open-button{
+background-color:black;
+color:white;
+padding: 16px 20px;
+border:none;
+cursor:pointer;
+opacity:0.8;
+position:fixed;
+nottom:23px;
+right:28px;
+width:180px;}
+
+.form-popup{
+  display:none;
+  postion:fixed;
+  bottom:0;
+  right:15px;
+  border:3px solid
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
