--- a/style.css
+++ b/style.css
@@ -86,8 +86,20 @@ min-height:200px;}
   outline:none;}
   
 .form-container .btn{
-  
+background-color: blue;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
 }
+
+.form-container .cancel {
+  background-color: blue;
+}
+
   
 
 /******************************************
