--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ img{
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.storehours{
+  top:25px;
+}
 .open-button{
 background-color:black;
 color:white;
@@ -99,6 +103,7 @@ background-color: blue;
 .form-container .cancel {
   background-color: blue;
 }
+
 
   
 
