🎷🛣 Checkpoint ./index.html:41095882/1342 ./style.css:41095882/58

--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ img{
   background-size: cover;
 }
 
-.storehours{
-  top:25px;
+.store-hours{
+  right:50%;
 }
 .open-button{
 background-color:black;
