🌚🎷 Checkpoint ./index.html:41095882/304 ./style.css:41095882/63

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ position:absolute;
 bottom:8px;
 top:10px;
 font-size:50px;
+bottom:12px;
 }
 img{
   background-image:url("https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025");
