--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 .topnav a{
   color:black;
-  text-align:center;
+  float:right;
   padding:14px 16px;
   text-decoration:none;
   font-size:17px;  
@@ -37,11 +37,11 @@ position:absolute;
 bottom:8px;
 top:10px;
 font-size:50px;
-bottom:12px;
+left:33%;
 }
 img{
   background-image:url("https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025");
-  height:100%;
+  height:50%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
