--- a/style.css
+++ b/style.css
@@ -37,8 +37,10 @@ text-align:center;
 position:absolute;
 bottom:8px;
 top:30px;
-font-size:50px;
-left:47%;
+font-size:60px;
+left:32%;
+font-family: 'Great Vibes', cursive;
+
 }
 img{
   background-image:url("https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025");
