--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   padding:110px 17px;
   text-decoration:none;
   font-size:17px; 
+  font-family: 'Lobster Two', cursive;
   
  
 }
@@ -40,7 +41,7 @@ bottom:8px;
 top:36px;
 font-size:60px;
 left:33%;
-font-family: 'Great Vibes', cursive;
+font-family: 'Lobster Two', cursive;
 
 }
 img{
