--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@
   overflow:hidden;
   position:fixed;
 }
+
+body{
+  background-color: #FFE53B;
+background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);}
+ 
+
 .topnav a{
   color:black;
   padding:110px 17px;
@@ -45,7 +51,7 @@ font-family: 'Lobster Two', cursive;
 
 }
 img{
-  background-image:url("https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025");
+  background-image:url("https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash__1_-removebg-preview.png?v=1654136938511");
   height:50%;
   max-width:100%;
   background-position: center;
