--- a/style.css
+++ b/style.css
@@ -16,18 +16,11 @@
   overflow:hidden;
   position:fixed;
 }
-
-body{
-  background-color: #FFE53B;
-background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);}
- 
-
 .topnav a{
   color:black;
   padding:110px 17px;
   text-decoration:none;
   font-size:17px; 
-  font-family: 'Lobster Two', cursive;
   
  
 }
@@ -47,11 +40,11 @@ bottom:8px;
 top:36px;
 font-size:60px;
 left:33%;
-font-family: 'Lobster Two', cursive;
+font-family: 'Great Vibes', cursive;
 
 }
 img{
-  background-image:url("https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash__1_-removebg-preview.png?v=1654136938511");
+  background-image:url("https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025");
   height:50%;
   max-width:100%;
   background-position: center;
