🐯🚵 Checkpoint ./index.html:41095882/1630 ./style.css:41095882/751 ./.glitch-assets:41095882/591

--- a/style.css
+++ b/style.css
@@ -10,47 +10,26 @@
 /******************************************
 /* LAYOUT
 /*******************************************/
-.topnav{
-  text-align: center;
-  background-color:white;
-  overflow:hidden;
-  position:fixed;
-}
-.topnav a{
-  color:black;
-  padding:110px 17px;
-  text-decoration:none;
-  font-size:17px; 
-  
- 
-}
+body{
+background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);}
 
-.topnav .icon{
- display:none;
-  
-}
-.mainimage{
-text-align:center;
 
-}
+
+  
+
+
 .top-left{
 position:absolute;
-
 bottom:8px;
 top:36px;
 font-size:60px;
 left:33%;
-font-family: 'Great Vibes', cursive;
+font-family: 'Lobster Two', cursive;
+}
 
-}
-img{
-  background-image:url("https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025");
-  height:50%;
-  max-width:100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+
+
+
 
 
 
