--- a/style.css
+++ b/style.css
@@ -10,28 +10,16 @@
 /******************************************
 /* LAYOUT
 /*******************************************/
-body{
-background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);}
-
-
-
-  
-
-
-.top-left{
-position:absolute;
-bottom:8px;
-top:36px;
-font-size:60px;
-left:33%;
-font-family: 'Lobster Two', cursive;
+h1{
+  display:flex;
+  justify-content:center;
+  font-family: 'Lobster Two', cursive;
+  font-size:50px;
 }
 
-
-
-
-
-
+body{
+  background-image:
+}
 
   
 
