🔖🌱 Checkpoint ./style.css:41095882/166

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ nav {
   position: relative;
   width: 590px;
   height: 50px;
-  background-color: #34495e;
+  background-color: ;
   border-radius: 8px;
   font-size: 0;
 }
@@ -78,7 +78,7 @@ a:nth-child(5) {
 nav .start-home, a:nth-child(1):hover~.animation {
   width: 100px;
   left: 0;
-  background-color: #1abc9c;
+  background-color: red;
 }
 nav .start-about, a:nth-child(2):hover~.animation {
   width: 110px;
@@ -88,17 +88,18 @@ nav .start-about, a:nth-child(2):hover~.animation {
 nav .start-blog, a:nth-child(3):hover~.animation {
   width: 100px;
   left: 210px;
-  background-color: #3498db;
+  background-color: #f24900;
 }
 nav .start-portefolio, a:nth-child(4):hover~.animation {
   width: 160px;
   left: 310px;
-  background-color: #9b59b6;
+  background-color: #ff741a;
 }
 nav .start-contact, a:nth-child(5):hover~.animation {
   width: 120px;
   left: 470px;
-  background-color:transparent;
+  background-color:#ffbf00;
+
 }
 
 
