⛰👴 Checkpoint ./style.css:41095882/485

--- a/style.css
+++ b/style.css
@@ -31,11 +31,10 @@ img{
 
 nav {
   margin: 27px auto 0;
-
+  text-align:center;
   position: relative;
   width: 590px;
   height: 50px;
-  background-color: ;
   border-radius: 8px;
   font-size: 0;
 }
@@ -59,16 +58,14 @@ nav .animation {
   z-index: 0;
   transition: all .5s ease 0s;
   border-radius: 8px;
+
 }
 a:nth-child(1) {
   width: 100px;
+   
 }
-a:nth-child(2) {
-  width: 110px;
-}
-a:nth-child(3) {
-  width: 100px;
-}
+
+
 a:nth-child(4) {
   width: 160px;
 }
@@ -77,14 +74,16 @@ a:nth-child(5) {
 }
 nav .start-home, a:nth-child(1):hover~.animation {
   width: 100px;
-  left: 0;
+  left: 140px;
   background-color: red;
+
 }
 
 nav .start-portefolio, a:nth-child(4):hover~.animation {
   width: 160px;
   left: 310px;
   background-color: #ff741a;
+  
 }
 nav .start-contact, a:nth-child(5):hover~.animation {
   width: 120px;
