--- a/style.css
+++ b/style.css
@@ -31,10 +31,11 @@ img{
 
 nav {
   margin: 27px auto 0;
-  text-align:center;
+
   position: relative;
   width: 590px;
   height: 50px;
+  background-color: ;
   border-radius: 8px;
   font-size: 0;
 }
@@ -58,14 +59,16 @@ nav .animation {
   z-index: 0;
   transition: all .5s ease 0s;
   border-radius: 8px;
-
 }
 a:nth-child(1) {
   width: 100px;
-   
 }
-
-
+a:nth-child(2) {
+  width: 110px;
+}
+a:nth-child(3) {
+  width: 100px;
+}
 a:nth-child(4) {
   width: 160px;
 }
@@ -74,16 +77,23 @@ a:nth-child(5) {
 }
 nav .start-home, a:nth-child(1):hover~.animation {
   width: 100px;
-  left: 140px;
+  left: 0;
   background-color: red;
-
 }
-
+nav .start-about, a:nth-child(2):hover~.animation {
+  width: 110px;
+  left: 100px;
+  background-color: #e74c3c;
+}
+nav .start-blog, a:nth-child(3):hover~.animation {
+  width: 100px;
+  left: 210px;
+  background-color: #f24900;
+}
 nav .start-portefolio, a:nth-child(4):hover~.animation {
   width: 160px;
   left: 310px;
   background-color: #ff741a;
-  
 }
 nav .start-contact, a:nth-child(5):hover~.animation {
   width: 120px;
