🐘🚁 Checkpoint ./style.css:41095882/211

--- a/style.css
+++ b/style.css
@@ -130,5 +130,8 @@ p {
 }
 
 @media screen and (max-width:720px) {
-/*CSS code for devices with a maximal width of 720 px */
+.grid-list {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.75rem;
+}
 }
